--- a/First.html
+++ b/First.html
@@ -1,1 +1,80 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en" class="">
+<head>
+
+	<!-- Title of page -->
+	<title>My Title</title>	
+	
+	<!-- Page infomations -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="My Description">
+	<meta name="author" content="Ny Name ">
+	
+	<!-- Favicon & icons -->
+	<link rel="shortcut icon" href="/ico/favicon.ico">
+
+	<!-- CSS links -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	
+	<!-- Google Fonts  -->
+	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700,300" rel="stylesheet" type="text/css">		
+	
+	<!-- CSS embed -->
+	<style>
+		body {
+			font-family : 'Oswald', sans-serif;
+			font-size : 33px;    
+		}	
+	</style>
+</head>
+<body>
+
+	<!-- HEADER - begin
+	======================================================================== -->
+	<div class="container">
+		<h1>Hello Panos</h1>
+	</div>
+	
+	<!-- HEADER - end
+	======================================================================== -->		
+	
+	
+	
+	<!-- FOOTER - Begin
+	======================================================================== -->
+	<footer class="footer">
+		<div class="container">
+			<br/>
+			<!-- Copyright -->
+			<section class="copyright">
+				<p>&copy; My Name or Company Name. All Rights Reserved.</p>
+			</section>
+		
+		</div>
+	</footer>		
+	<!-- FOOTER - End
+	======================================================================== -->		
+	
+	
+	<!-- Script links -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	
+	<!-- Script embed - begin
+	======================================================================== -->			
+	<script type="text/javascript">
+		jQuery(document).ready(function($) {	
+			$("div").click(function(){
+				alert("YES it work.");
+			});	
+			console.log( "YES it work. From console" );			
+		});
+	</script>
+	<!-- Script embed - end
+	======================================================================== -->			
+	
+</body>
+</html>
